[tool.poetry]
name = "dynamic-cast"
version = "0.1.0"
description = ""
authors = ["Cxx-mlr <spapiernik12@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = [""]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dynamic_cast = 'dynamic_cast.__main__:main'