[tool.poetry]
name = "dynamic-cast"
version = "0.1.1a1"
description = ""
authors = ["Cxx-mlr <spapiernik12@gmail.com>"]

readme = "README.md"
license = "MIT"
keywords = [""]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
homepage = "https://github.com/Cxx-mlr"
repository = "https://github.com/Cxx-mlr/dynamic-cast"
documentation = "https://github.com/Cxx-mlr/dynamic-cast/blob/main/README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.dependencies]
python = ">=3.8"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dynamic_cast = 'dynamic_cast.__main__:main'